tests/final/expect/15__diag__malformed_invalid_dollar_no_crash.diag
Diagnostics:
Error: Invalid character in source at tests/final/cases/15__torture__malformed_invalid_dollar_no_crash.c:3:11 (got '$')
